Apply Ninja environment settings

The Ninja configuration page offers to select a build environment.
This setting is now applied when creating a corresponding NinjaJob.

BUG: 403769
FIXED-IN: 5.11.230400